--- a/client/src/components/layout/Footer.css
+++ b/client/src/components/layout/Footer.css
@@ -1,7 +1,10 @@
 .rodape {
   height: 4.5rem;
   background-color: hwb(125 51% 11%);
-  position: absolute;
+  /*position: absolute;
   width: 100%;
-  bottom: 0;
+  bottom: 0;*/
+  text-align: center;
+  padding: 1rem;
+  margin-top: 2rem;
 }
