--- a/client/src/components/ui/TitlePilot.css
+++ b/client/src/components/ui/TitlePilot.css
@@ -1,5 +1,11 @@
 .title {
   text-align: center;
   font-size: 90px;
-  font-family: bold;
+  font-weight: bold;
+  color: hwb(125 51% 11%);
+  
+  -webkit-text-stroke: 1.5px black;
+  -webkit-text-fill-color: hwb(125 51% 11%); /* Para garantir o preenchimento da cor */
+  text-shadow:
+    0 1px 1px rgba(0, 0, 0, 0.25);
 }
