algumas organizacoes de pasta

--- a/client/src/components/forms/ProfileForm/ProfileForm.css
+++ b/client/src/components/forms/ProfileForm/ProfileForm.css
@@ -33,3 +33,20 @@
     justify-items: center;
     font-size: 110px;
 }
+
+.profile-container {
+  max-width: 400px;
+}
+
+.botoes-container {
+  margin-top: 12px;
+}
+
+.botao-cancelar {
+  margin-left: 8px;
+}
+
+.mensagem-feedback {
+  margin-top: 10px;
+  color: green;
+}
