--- a/client/src/components/ui/Titles/TitleSuporte/TitleSuporte.css
+++ b/client/src/components/ui/Titles/TitleSuporte/TitleSuporte.css
@@ -1,6 +1,6 @@
-.titleregister {
+.titlesuporte {
     margin-top: 30px;
-    font-size: 60px;
+    font-size: 30px;
     text-align: center;
     font-weight: 500;
     font-family: sans-serif;
