--- a/client/src/components/ui/Titles/TitleGasto/TitleGasto.css
+++ b/client/src/components/ui/Titles/TitleGasto/TitleGasto.css
@@ -1,6 +1,6 @@
 .titlegasto {
     margin-top: 30px;
-    margin-left: 1.5rem;
+    margin-right: 1.2rem;
     margin-bottom: 1rem;
     font-size: 30px;
     text-align: center;
